--- a/main.html
+++ b/main.html
@@ -19,13 +19,13 @@
                     <h2 class="card-title">Mobile and Tablet Support</h2>
                     <p class="card-text">With this new update you will be able to sync your work across large number of
                         platforms.</p>
-                    <button class="btn bg-primary text-white rounded-3">Read more</button>
+                    <button class="btn btn-primary text-white rounded-3">Read more</button>
                 </div>
             </div>
 
-            <div class="card mt-1 w-25">
-                <h6 class="card-header bg-danger text-white">Alert</h6>
-                <div class="card-body bg-danger text-white">
+            <div class="card bg-danger mt-1 w-25">
+                <h6 class="card-header  text-white">Alert</h6>
+                <div class="card-body  text-white">
                     <h2 class="card-title">Node Dead</h2>
                     <p class="card-text"> Node 5 (east-us) is offline for last 12 days</p>
                 </div>
